# forgesyte

./: .forbidden-terms  .gitignore  .pre-commit-config.yaml  <parameter name="content">"""Tests for REST Pipeline Endpoint.  <parameter name="content">"""Tests for VisionAnalysisService Pipeline Integration (Phase 13).  AGENTS.md  ARCHITECTURE.md  BRANDING.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_TO_80_PLAN.md  GEMINI.md  IMPLEMENTATION_PLAN.md  MERGE_READY.md  PHASE_12_STEP4_ANALYSIS.md  PLAN_ARCHITECTURE.md  PLUGIN_DEVELOPMENT.md  QWEN.md  README.md  REFACTORING_COMPLETE.md  ROADMAP.md  TODO_FIX_TESTS.md  TODO_IMPLEMENTATION_101.md  TODO_VIDEO_TRACKER_FIX.md  WORKER_PICKUP_ANALYSIS.md  apply_changes.py  e2e.test.sh  e2e_local.sh  gemini-extension.json  gemini_extension_manifest.json  implementation_plan.md  requirements-lint.txt  restore_original_code.py
server/: CLAUDE.md  PHASE_14_COMPLETION_SUMMARY.md  README.md  __init__.py  alembic.ini  debug_output.txt  forgesyte.log.1  pyproject.toml
server/app/: __init__.py  api.py  api_plugins.py  auth.py  exceptions.py  extended_job.py  main.py  mcp_adapter.py  mcp_handlers.py  mcp_jsonrpc.py  mcp_routes.py  mcp_transport.py  models.py  models_manifest.py  plugin_loader.py  protocols.py  ray_tasks.py  routes_pipeline.py  settings.py  tasks.py  websocket_manager.py  ws_events.py
server/app/config/: tool_mappings.py
server/app/core/: database.py
server/app/examples/: README.md  plugin_outputs.py
server/app/logging/: __init__.py  capture.py  context.py  filter.py  filters.py  logrecord.pyi
server/app/mcp/: __init__.py  adapter.py  handlers.py  jsonrpc.py  routes.py  transport.py
server/app/migrations/: env.py
server/app/models/: __init__.py  job.py  job_tool.py
server/app/observability/: __init__.py  device_tracking.py
server/app/pipeline_models/: __init__.py  pipeline_graph_models.py
server/app/pipelines/: ocr_only.json  yolo_ocr.json
server/app/plugins/: __init__.py  base.py  s  schemas.py
server/app/realtime/: __init__.py  connection_manager.py  job_progress_router.py  message_types.py  websocket_router.py
server/app/routes/: routes_pipelines.py
server/app/schemas/: __init__.py  job.py  normalisation.py  pipeline.py  plugin_types.py
server/app/services/: __init__.py  analysis_service.py  dag_pipeline_service.py  device_selector.py  health_check.py  image_acquisition.py  job_management_service.py  job_tools_service.py  manifest_cache.py  manifest_cache_service.py  pipeline_registry_service.py  plugin_management_service.py  tool_router.py  type_validator.py  video_file_pipeline_service.py  video_pipeline_service.py  video_pipeline_service.py.backup  video_summary_service.py  vision_analysis.py
server/app/workers/: __init__.py  db_utils.py  progress.py  ray_actors.py  run_job_worker.py  run_video_worker.py  video_worker.py  watchdog.py  worker.py  worker_state.py
server/data/: foregsyte.duckdb  foregsyte.duckdb.wal
server/data/video_jobs/: test_results.json
server/scripts/: forge_ray_head.sh  forge_ray_worker.sh  test_analyze_json_base64.py  validate_mcp.py
server/tests/: conftest.py  test_analysis_result_contract.py  test_analysis_result_extra_field.py  test_api_endpoints.py  test_basic_functionality.py  test_e2e_unified_jobs.py  test_jsonrpc.py  test_logging_startup.py  test_main.py  test_mcp.py  test_mcp_adapter.py  test_mcp_capabilities_update.py  test_mcp_endpoints.py  test_mcp_gemini_integration.py  test_mcp_jsonrpc.py  test_mcp_optimization.py  test_mcp_protocol_methods.py  test_mcp_resources.py  test_mcp_tools_call.py  test_mcp_transport.py  test_mcp_version_negotiation.py  test_models.py  test_models_manifest.py  test_normalisation_integration.py  test_pipeline_hello_world.py  test_pipeline_rest.py  test_pipeline_validation.py  test_plugin_loader.py  test_progress_sync_context.py  test_ray_tasks.py  test_server_startup.py  test_tasks.py  test_tool_router.py  test_transformation_verification.py  test_video_pipeline_rest.py  test_video_pipeline_service.py  test_video_pipeline_ws.py
server/tests/api/: test_api_endpoints.py  test_device_selector.py  test_job_progress_ws.py  test_jobs_progress_logging.py  test_jsonrpc.py  test_multi_tool_image.py  test_plugins_manifest.py  test_plugins_run_tool.py  test_plugins_run_yolo_tools_cpu.py  test_tool_parameter.py  test_tool_validation.py  test_video_tracker_endpoints.py
server/tests/api_typed_responses/: README.md  test_api_typed_responses.py
server/tests/auth/: test_basic_functionality.py
server/tests/contract/: test_tool_ocr_output_json_safe.py  test_yolo_image_json_safe.py  test_yolo_video_json_safe.py
server/tests/execution/: conftest.py  test_analysis_execution_endpoint.py  test_execution_integration.py  test_image_bytes_key_tool_args_contract.py  test_issue_164_tool_args_contract.py  test_job_execution_service.py  test_phase16_governance.py  test_plugin_execution_service.py  test_registry_metrics.py  test_toolrunner_validation.py  test_vocabulary_governance.py  test_vocabulary_scanner.py
server/tests/fixtures/: output.json
server/tests/helpers/: __init__.py  log_capture.py
server/tests/image/: test_image_submit_hybrid.py  test_image_submit_mocked.py
server/tests/integration/: test_api_contracts.py  test_local_plugin_loading.py  test_phase8_end_to_end.py  test_progress_streaming.py  test_ray_integration.py  test_video_tracker.py
server/tests/logging/: test_job_correlation.py
server/tests/mcp/: test_mcp.py  test_mcp_adapter.py  test_mcp_capabilities_update.py  test_mcp_endpoints.py  test_mcp_gemini_integration.py  test_mcp_handlers_gemini_integration.py  test_mcp_handlers_http_endpoint.py  test_mcp_handlers_resources.py  test_mcp_handlers_tools.py  test_mcp_http_endpoint.py  (+4 more)
server/tests_heavy/: test_yolo_image_json_safe.py  test_yolo_video_json_safe.py
server/tools/: forbidden_vocabulary.yaml  forbidden_vocabulary_phase16.yaml  generate_plugin_capability_matrix.py  validate_phase16_path.py  validate_pipelines.py  validate_plugins.py  validate_video_batch_path.py  vocabulary_scanner.py  vocabulary_scanner_config.yaml
(+1058 files in other folders)
