[project]
name = "forgesyte"
version = "0.1.0"
description = "ForgeSyte: A modular AI-vision MCP server engineered for developers"
authors = [
    {name = "ForgeSyte Team", email = "team@forgesyte.ai"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24.0",
    "websockets>=11.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pytesseract>=0.3.10",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
extend-ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
extend-ignore = [
    "PLR",  # Design related codes
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["src/"]
omit = ["*/tests/*", "*/conftest.py"]