[project]
name = "forgesyte"
version = "0.1.0"
description = "ForgeSyte: A modular AI-vision MCP server engineered for developers"
authors = [
    {name = "ForgeSyte Team", email = "team@forgesyte.ai"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24.0",
    "tenacity>=8.0.0",
    "websockets>=11.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pytesseract>=0.3.10",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.0.0",
    "python-json-logger>=2.0.0",
    "duckdb>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.20.0",
    "black==24.1.1",
    "ruff==0.9.1",
    "mypy==1.14.0",
    "isort>=5.0.0",
    "types-Pillow==10.0.0.2",
    "types-requests==2.31.0.10",
]

[project.optional-dependencies]
types = [
    "types-Pillow==10.0.0.2",
    "types-requests==2.31.0.10",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
extend-ignore = [
    "E501",  # Line too long (handled by formatter)
    "PLR",  # Design related codes
    "B008", # Allow function calls in FastAPI defaults (Query, Depends, etc.)
    "C901", # Allow complex functions where needed (like websocket handlers)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "asyncio: mark test as async (requires pytest-asyncio)",
]

[tool.coverage.run]
source = ["app/"]
omit = ["*/tests/*", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
]
fail_under = 80
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
explicit_package_bases = true
namespace_packages = true
# Less strict for initial migration
check_untyped_defs = false
disallow_any_generics = false
disallow_incomplete_defs = false
disallow_subclassing_any = false
disallow_untyped_decorators = false
no_implicit_reexport = false
warn_redundant_casts = false
warn_unused_ignores = false
exclude = [
    "^scripts/",
]

# Handle third-party libraries properly - all have inline types
[[tool.mypy.overrides]]
module = [
    "PIL.*",
    "numpy.*",
    "pytesseract.*",
    "uvicorn.*",
    "pydantic.*",
    "fastapi.*",
    "httpx.*",
    "websockets.*",
    "tenacity.*",
]
ignore_missing_imports = true